direct Stan to JAX

--- a/references.bib
+++ b/references.bib
@@ -23,6 +23,16 @@
   url = {https://www.R-project.org/},
 }
 
+@article{bahadur1966note,
+  title={A note on quantiles in large samples},
+  author={Bahadur, R Raj},
+  journal={The Annals of Mathematical Statistics},
+  volume={37},
+  number={3},
+  pages={577--580},
+  year={1966}
+}
+
 @article{betancourt2017conceptual,
   title={A conceptual introduction to {H}amiltonian {M}onte {C}arlo},
   author={Betancourt, Michael},
@@ -393,6 +403,15 @@
   journal={arXiv},
   volume={1804.06788},
   year={2018}
+}
+
+@book{vandervaart1998asymptotic,
+  title={Asymptotic Statistics},
+  author={Van der Vaart, A W},
+  year={1998},
+  publisher={Cambridge University Press},
+  series={Cambridge Series on Statistical and Probabilistic Mathematics},
+  number={3}
 }
 
 @article{vehtari2017practical,
